--- a/src/main/resources/templates/categories-all.html
+++ b/src/main/resources/templates/categories-all.html
@@ -8,10 +8,10 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
-        <h2 class="text-center text-dark mt-5">All Brands</h2>
-        <div th:each="b : ${allBrand}" class="d-flex flex-column bg-text mb-3">
-          <h2 th:text="'Brand: ' + ${b.name}"></h2>
-          <h4><a class="btn-block" th:href="@{/brand/details/{name}(name=${b.name})}">Detail
+        <h2 class="text-center text-dark mt-5">All Categories</h2>
+        <div th:each="category : ${categoriesInfos}" class="d-flex flex-column bg-text mb-3">
+          <h2 th:text="'Category: ' + ${category.categoryTitle}"></h2>
+          <h4><a class="btn-block" th:href="@{/category/details/{categoryTitle}(categoryTitle=${category.categoryTitle})}">Detail
             info</a></h4>
         </div>
       </div>
