--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,31 +5,40 @@
                 <a class="nav-item nav-link text-dark" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/brand/add">Add Brand</a>
+                <a class="nav-item nav-link text-dark" href="/category/add">Add Category</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/model/add">Add Model</a>
+                <a class="nav-item nav-link text-dark" href="/feedback/add">Add Feedback</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/offer/add">Add Offer</a>
+                <a class="nav-item nav-link text-dark" href="/order/add">Add Order</a>
             </li>
             <li class="nav-item">
                 <a class="nav-item nav-link text-dark" href="/user/add">Add User</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/userrole/add">Add UserRole</a>
+                <a class="nav-item nav-link text-dark" href="/product/add">Add Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link text-dark" href="userRole-add">Add UserRole</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link text-dark" href="/category/all">All Category</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link text-dark" href="/feedback/all">All Feedback</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link text-dark" href="/order/all">All Order</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link text-dark" href="/product/all">All Product</a>
             </li>
             <li class="nav-item">
                 <a class="nav-item nav-link text-dark" href="/user/all">All User</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/brand/all">All Brand</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/model/all">All Model</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link text-dark" href="/offer/all">All Offer</a>
+                <a class="nav-item nav-link text-dark" href="userRoles-all">All User Role</a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-item nav-link text-dark text-info" href="/users/profile"><th:block sec:authentication="name"></th:block></a>
