--- a/src/main/resources/templates/orders-all.html
+++ b/src/main/resources/templates/orders-all.html
@@ -8,13 +8,12 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
-                <h2 class="text-center text-dark mt-5">All Users</h2>
-                <div th:each="a : ${userInfos}" class="d-flex flex-column bg-text mb-3">
-                    <h2 th:text="'Username: ' + ${a.username}"></h2>
-                    <h4 th:text="'Name: ' + ${a.firstName}"></h4>
-                    <h4 th:text="'Lastname: ' + ${a.last_name}"></h4>
-                    <h4><a class="btn-block" th:href="@{/user/details/{username}(username=${a.username})}">Detail
-                        info</a></h4>
+                <h2 class="text-center text-dark mt-5">All Orders</h2>
+                <div th:each="order : ${orderInfos}" class="d-flex flex-column bg-text mb-3">
+                    <h2 th:text="'Client: ' + ${order.client.username}"></h2>
+                    <h2 th:text="'Product: ' + ${order.product.productTitle}"></h2>
+                    <h4 th:text="'Price: ' + ${order.price}"></h4>
+                    <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-danger btn-sm">Delete Order</a>
                 </div>
             </div>
         </div>
