--- a/src/main/resources/templates/user-add.html
+++ b/src/main/resources/templates/user-add.html
@@ -13,7 +13,7 @@
         </div>
         <form th:action="@{/user/add}"
               th:method="post"
-              th:object="${userDto}"
+              th:object="${userModel}"
               class="m-md-auto w-50 pb-3">
           <div class="mb-3">
             <label class="form-label" for="username">Username</label>
