--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
                       th:method="post"
                       class="m-md-auto w-50 pb-3">
                     <div class="mb-3">
-                        <label class="form-label" for="username">Name</label>
+                        <label class="form-label" for="username">User Name</label>
                         <input id="username"
                                name="username"
                                th:value="${username}"
@@ -26,6 +26,7 @@
                         <label class="form-label" for="password">Password</label>
                         <input id="password"
                                name="password"
+                               th:value="${password}"
                                type="password" class="form-control text-center" aria-describedby="passwordHelp"/>
                     </div>
 
