--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,13 +14,13 @@
         <div class="row bg-light rounded">
           <div class="col-md-6" th:object="${user}">
             <h2>User</h2>
-            <h4 th:text="'Full Name: ' + *{fullName}"></h4>
             <h4 th:text="'Username: ' + *{username}"></h4>
-            <h4 th:text="'Age: ' + *{age}"></h4>
+            <h4 th:text="'First Name: ' + *{firstName}"></h4>
+            <h4 th:text="'Last Name: ' + *{lastName}"></h4>
             <b>User Roles: </b>
             <div sec:authentication="principal.authorities"></div>
           </div>
-          <div class="col-md-6"><img src="/pic/employee.png" height="350px"></div>
+<!--          <div class="col-md-6"><img src="/pic/employee.png" height="350px"></div>-->
         </div>
       </main>
     </div>
