--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -26,36 +26,25 @@
           </div>
 
           <div class="mb-3">
-            <label class="form-label" for="fullname">Full Name</label>
-            <input th:field="*{fullname}"
+            <label class="form-label" for="firstName">First Name</label>
+            <input th:field="*{firstName}"
                    th:errorclass="is-invalid"
-                   type="text" class="form-control text-center" id="fullname" aria-describedby="fullname"
-                   name="fullname"/>
-            <small th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}" class="text-danger">Error
+                   type="text" class="form-control text-center" id="firstName" aria-describedby="firstName"
+                   name="firstName"/>
+            <small th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="text-danger">Error
               message</small>
           </div>
 
           <div class="mb-3">
-            <label class="form-label" for="email">Email</label>
-            <input th:field="*{email}"
+            <label class="form-label" for="lastName">Last Name</label>
+            <input th:field="*{lastName}"
                    th:errorclass="is-invalid"
-                   type="email" class="form-control text-center"
-                   id="email" aria-describedby="email" name="email"/>
-            <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+                   type="lastName" class="form-control text-center"
+                   id="lastName" aria-describedby="lastName" name="lastName"/>
+            <small th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                    class="text-danger">Error
               message</small>
           </div>
-
-          <div class="mb-3">
-            <label class="form-label" for="age">Age</label>
-            <input th:field="*{age}"
-                   th:errorclass="is-invalid"
-                   type="number" min="0" class="form-control text-center"
-                   id="age" aria-describedby="age" name="age"/>
-            <small th:if="${#fields.hasErrors('age')}" th:errors="*{age}"
-                   class="text-danger">Age</small>
-          </div>
-
           <div class="mb-3">
             <label class="form-label" for="password">Password</label>
             <input th:field="*{password}"
@@ -67,7 +56,6 @@
                    class="text-danger">Error
               message</small>
           </div>
-
 
           <div class="mb-3">
             <label class="form-label" for="confirmPassword">Confirm password</label>
