--- a/src/main/resources/templates/orders-all.html
+++ b/src/main/resources/templates/orders-all.html
@@ -9,7 +9,7 @@
             <div class="col-md-2"></div>
             <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
                 <h2 class="text-center text-dark mt-5">All Orders</h2>
-                <div th:each="order : ${orderInfos}" class="d-flex flex-column bg-text mb-3">
+                <div th:each="order : ${orderInfos}" class="d-flex flex-column bg-text mb-3" style="border: 1px solid #000; text-align: center;">
                     <h2 th:text="'Client: ' + ${order.client}"></h2>
                     <h2 th:text="'Product: ' + ${order.product}"></h2>
                     <h4 th:text="'Price: ' + ${order.price}"></h4>
