--- a/src/main/resources/templates/product-all.html
+++ b/src/main/resources/templates/product-all.html
@@ -9,13 +9,13 @@
             <div class="col-md-2"></div>
             <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
                 <h2 class="text-center text-dark mt-5">All Products</h2>
-                <div th:each="product : ${productInfos}" class="d-flex flex-column bg-text mb-3">
+                <div th:each="product : ${productInfos}" class="d-flex flex-column bg-text mb-3" style="border: 1px solid #000; text-align: center;">
+                    <img th:src="${product.image_url}" alt="Product Image" class="img-fluid mx-auto" style="max-width: 250px; max-height: 250px;"/>
                     <h2 th:text="'Title: ' + ${product.productTitle}"></h2>
                     <h4 th:text="'Price: ' + ${product.price}"></h4>
                     <h4 th:text="'Article: ' + ${product.article}"></h4>
                     <h4 th:text="'Count: ' + ${product.count}"></h4>
                     <h4 th:text="'Category: ' + ${product.category}"></h4>
-<!--                    <a th:href="@{'/product/details/{productTitle}(productTitle=${product.productTitle})}" class="btn btn-secondary btn-sm">Details</a>-->
                 </div>
             </div>
         </div>
