--- a/src/main/resources/templates/user-all.html
+++ b/src/main/resources/templates/user-all.html
@@ -9,7 +9,7 @@
             <div class="col-md-2"></div>
             <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
                 <h2 class="text-center text-dark mt-5">All Users</h2>
-                <div th:each="a : ${userInfos}" class="d-flex flex-column bg-text mb-3">
+                <div th:each="a : ${userInfos}" class="d-flex flex-column bg-text mb-3" style="border: 1px solid #000; text-align: center;">
                     <h2 th:text="'Username: ' + ${a.username}"></h2>
                     <h4 th:text="'Name: ' + ${a.firstName}"></h4>
                     <h4 th:text="'Lastname: ' + ${a.last_name}"></h4>
